--- a/index.html
+++ b/index.html
@@ -210,7 +210,9 @@
           adicional. Ele possui ataques de água poderosos, como Water Gun e
           Hydro Pump.
         </p>
+        <h3 id="jose">Jose Eduardo Gay</h3>
       </section>
+
 
       <section id="curiosidades" aria-labelledby="curiosidades-label">
         <h2 id="curiosidades-label">Curiosidades</h2>
