--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <title>Página do Pokémon Squirtle</title>
+    <script>
+ 
+    </script>
     <style>
       /* Reset de estilos para garantir consistência em diferentes navegadores */
       body,
@@ -210,7 +213,7 @@
           adicional. Ele possui ataques de água poderosos, como Water Gun e
           Hydro Pump.
         </p>
-        <h3 id="jose">Jose Eduardo Gay</h3>
+        <h3 id="jose"></h3>
       </section>
 
 
