feat: fixed layout shifting

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
         <img
           src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
           alt="Squirtle - Pokémon do tipo Água"
+          width="96"
+          height="96"
         />
         <p>
           Squirtle é um Pokémon do tipo Água. É o Pokémon inicial da região de
@@ -110,6 +112,8 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
                 alt="Squirtle"
+                width="215"
+                height="215"
               />
               <figcaption>1. Squirtle</figcaption>
             </figure>
@@ -120,6 +124,8 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
                 alt="Wartortle"
+                width="215"
+                height="215"
               />
               <figcaption>2. Wartortle</figcaption>
             </figure>
@@ -130,6 +136,10 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
                 alt="Blastoise"
+                ,
+                width="215"
+                ,
+                height="215"
               />
               <figcaption>3. Blastoise</figcaption>
             </figure>
