--- a/index.html
+++ b/index.html
@@ -24,12 +24,17 @@
     <main>
       <section id="info-squirtle" aria-labelledby="info-squirtle-label">
         <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
-        <img
-          src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
-          alt="Squirtle - Pokémon do tipo Água"
-          width="96"
-          height="96"
-        />
+        <div id="squirtle-img">
+          <img
+            src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
+            alt="Squirtle - Pokémon do tipo Água"
+          />
+          <img
+            id="squirtle-img-2"
+            src="https://archives.bulbagarden.net/media/upload/thumb/7/79/Squirtle_SSBU.png/200px-Squirtle_SSBU.png"
+            alt="Squirtle - Pokemon do tipo água 2"
+          />
+        </div>
         <p>
           Squirtle é um Pokémon do tipo Água. É o Pokémon inicial da região de
           Kanto e evolui para Wartortle.
@@ -112,8 +117,6 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
                 alt="Squirtle"
-                width="215"
-                height="215"
               />
               <figcaption>1. Squirtle</figcaption>
             </figure>
@@ -124,8 +127,6 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
                 alt="Wartortle"
-                width="215"
-                height="215"
               />
               <figcaption>2. Wartortle</figcaption>
             </figure>
@@ -136,10 +137,6 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
                 alt="Blastoise"
-                ,
-                width="215"
-                ,
-                height="215"
               />
               <figcaption>3. Blastoise</figcaption>
             </figure>
