--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
         <h2 id="info-squirtle-label">Informações sobre Squirtle</h2>
         <div id="squirtle-img">
           <img
+            class="hover-img"
             src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/7.png"
             alt="Squirtle - Pokémon do tipo Água"
           />
           <img
+            class="hover-img"
             id="squirtle-img-2"
             src="https://archives.bulbagarden.net/media/upload/thumb/7/79/Squirtle_SSBU.png/200px-Squirtle_SSBU.png"
             alt="Squirtle - Pokemon do tipo água 2"
@@ -117,6 +119,7 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
                 alt="Squirtle"
+                class="hover-img"
               />
               <figcaption>1. Squirtle</figcaption>
             </figure>
@@ -127,6 +130,7 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
                 alt="Wartortle"
+                class="hover-img"
               />
               <figcaption>2. Wartortle</figcaption>
             </figure>
@@ -137,6 +141,7 @@
               <img
                 src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
                 alt="Blastoise"
+                class="hover-img"
               />
               <figcaption>3. Blastoise</figcaption>
             </figure>
