feat: added specific page for pokemon

--- a/index.html
+++ b/index.html
@@ -116,33 +116,39 @@
         <ul>
           <li>
             <figure>
-              <img
-                src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
-                alt="Squirtle"
-                class="hover-img"
-              />
+              <a href="./pokemon/pokemon.html?evolution=squirtle">
+                <img
+                  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/007.png"
+                  alt="Squirtle"
+                  class="hover-img"
+                />
+              </a>
               <figcaption>1. Squirtle</figcaption>
             </figure>
           </li>
 
           <li>
             <figure>
-              <img
-                src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
-                alt="Wartortle"
-                class="hover-img"
-              />
+              <a href="./pokemon/pokemon.html?evolution=wartortle">
+                <img
+                  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/008.png"
+                  alt="Wartortle"
+                  class="hover-img"
+                />
+              </a>
               <figcaption>2. Wartortle</figcaption>
             </figure>
           </li>
 
           <li>
             <figure>
-              <img
-                src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
-                alt="Blastoise"
-                class="hover-img"
-              />
+              <a href="./pokemon/pokemon.html?evolution=blastoise">
+                <img
+                  src="https://assets.pokemon.com/assets/cms2/img/pokedex/detail/009.png"
+                  alt="Blastoise"
+                  class="hover-img"
+                />
+              </a>
               <figcaption>3. Blastoise</figcaption>
             </figure>
           </li>
