feat: added last visited & animation

--- a/index.html
+++ b/index.html
@@ -163,6 +163,8 @@
       <p><a href="#header">Voltar para o topo</a></p>
       <p><a href="mailto:contato@squirtlepage.com">Contato via e-mail</a></p>
       <p><a href="tel:+5555555555">Telefone: (55) 5555-5555</a></p>
+      <p id="times-visited"></p>
     </footer>
+    <script src="script.js"></script>
   </body>
 </html>
