--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li><a href="#artigo-squirtle">Artigo sobre Squirtle</a></li>
         <li><a href="#recursos">Recursos Adicionais</a></li>
         <li><a href="#evolucao">Evolução</a></li>
+        <li><a href="./todo-list/index.html">Todo List</a></li>
       </ul>
     </nav>
 
