--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -1,26 +1,32 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Página do Pokémon Squirtle</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Grid</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header id="header">
+    <header>
       <h1>Todo List</h1>
     </header>
-
     <main>
-      <div id="task-input">
-        <input type="text" name="task-input" id="input" />
-        <button id="button" onclick="">Adicionar Tarefa</button>
+      <div id="form">
+        <input
+          type="text"
+          placeholder="Digite uma tarefa..."
+          name="Insira task aqui"
+          id="task-input"
+        />
+        <button id="envio-task" onclick="addTask()">Adicionar Tarefa</button>
       </div>
+      <ul id="task-list"></ul>
     </main>
-
     <footer aria-label="Rodapé">
       <p aria-label="Copyright">&copy; 2024 Todo List.</p>
       <p id="times-visited"></p>
     </footer>
+    <script src="./script.js"></script>
     <script src="../script.js"></script>
   </body>
 </html>
