--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -1,32 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid</title>
-    <link rel="stylesheet" href="style.css" />
+    <title>Todo List</title>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <header>
-      <h1>Todo List</h1>
-    </header>
-    <main>
-      <div id="form">
-        <input
-          type="text"
-          placeholder="Digite uma tarefa..."
-          name="Insira task aqui"
-          id="task-input"
-        />
-        <button id="envio-task" onclick="addTask()">Adicionar Tarefa</button>
-      </div>
-      <ul id="task-list"></ul>
-    </main>
-    <footer aria-label="Rodapé">
-      <p aria-label="Copyright">&copy; 2024 Todo List.</p>
-      <p id="times-visited"></p>
-    </footer>
-    <script src="./script.js"></script>
+    <div class="container">
+      <header>
+        <h1>Todo List</h1>
+      </header>
+      <main>
+        <dialog>
+          <form id="update-task-form">
+            <input
+              type="text"
+              name="title"
+              id="update-title"
+              placeholder="Informe o título da tarefa"
+            />
+            <textarea
+              id="update-description"
+              name="description"
+              placeholder="Informe a descrição da tarefa"
+            ></textarea>
+            <div>
+              <button type="submit" id="update-task">Editar Tarefa</button>
+              <button id="cancel-update">Cancelar</button>
+            </div>
+          </form>
+        </dialog>
+        <!-- Formulário para adicionar tarefas -->
+        <form id="taskForm" onsubmit="addTask(event)">
+          <input
+            type="text"
+            name="title"
+            id="title"
+            required
+            placeholder="Informe o título da tarefa"
+          />
+          <textarea
+            id="description"
+            name="description"
+            required
+            placeholder="Informe a descrição da tarefa"
+          ></textarea>
+          <button type="submit" id="save-task">Salvar Tarefa</button>
+        </form>
+
+        <!-- Lista de tarefas -->
+        <ul id="taskList"></ul>
+      </main>
+      <footer>&copy; 2024 Todo List</footer>
+    </div>
+
+    <script src="./index.js"></script>
     <script src="../script.js"></script>
   </body>
 </html>
